# build-your-own-docker

./: README.md  course-definition.yml  starter-repository-definitions.yml
compiled_starters/c/: Dockerfile  README.md  codecrafters.yml
compiled_starters/docker-starter-c/: Dockerfile
compiled_starters/docker-starter-python/: README.md
compiled_starters/docker-starter-ruby/: Dockerfile  README.md
compiled_starters/docker-starter-rust/: Cargo.toml
compiled_starters/docker-starter-swift/: your_docker.sh
compiled_starters/go/: Dockerfile  codecrafters.yml  go.mod
compiled_starters/java/: Dockerfile  README.md  pom.xml
compiled_starters/nim/: README.md
compiled_starters/php/: Dockerfile  README.md
compiled_starters/python/: Dockerfile  README.md  your_docker.sh
compiled_starters/ruby/: Dockerfile  README.md  codecrafters.yml
dockerfiles/: c-9.2.Dockerfile  go-1.13.Dockerfile  go-1.16.Dockerfile  go-1.19.Dockerfile  go-1.21.Dockerfile  go-1.22.Dockerfile  java-1.8.Dockerfile  nim-1.0.Dockerfile  php-7.4.Dockerfile  python-3.11.Dockerfile  python-3.12.Dockerfile  ruby-2.7.Dockerfile  ruby-3.0.Dockerfile  ruby-3.2.Dockerfile  rust-1.43.Dockerfile  rust-1.54.Dockerfile  rust-1.62.Dockerfile  rust-1.68.Dockerfile  rust-1.70.Dockerfile  rust-1.76.Dockerfile  rust-1.77.Dockerfile  rust-1.80.Dockerfile  swift-5.6.Dockerfile
stage_descriptions/: base-01-je9.md  base-02-kf3.md  base-03-cn8.md  base-04-if6.md  base-05-lu7.md  base-06-hs1.md
starter_templates/: README.md  codecrafters.yml
starter_templates/rust/: Cargo.toml  Dockerfile
starter_templates/rust/code/: Cargo.toml  your_docker.sh
starter_templates/rust/code/.codecrafters/: compile.sh
starter_templates/rust/code/src/: main.rs
(+125 files in other folders)
