# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "docker-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
reqwest = { version = "0.11.13", features = ["json", "blocking"] } # http requests
bytes = "1.3.0"                                                    # helps wrap responses from reqwest
tokio = { version = "1.23.0", features = ["full"] }                # async http requests
libc = "0.2.103"                                                   # for syscalls like chroot
serde = { version = "1.0.136", features = ["derive"] }             # for json mangling
serde_json = "1.0.79"                                              # for json mangling
anyhow = "1.0.59"                                                  # error handling
thiserror = "1.0.32"                                               # error handling
tempfile = "3"                                                     # creating temporary directories
regex = "1"                                                        # for regular expressions
flate2 = "1.0.25"                                                  # for handling compressed data
tar = "0.4.38"
